--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "theme": "tvpage",
     "disablePathToLower": true,
     "enableRobotsTXT": true,
-    "galleryChannelIds": "137950",
+    "galleryChannelIds": "",
     "params": {
         "loginId": "3",
         "subfolder": "",
